<resources>
    <string name="app_name">My Application Login and Register</string>
    <string name="see_what_s_happening_in_the_world_right_now">See what\'s happening in the world right now.</string>
    <string name="ca">Create Account</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="log_in">Log in</string>
    <string name="emal">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="logg">Login</string>
    <string name="logintitle">Login</string>

</resources>
